--- a/client/src/app.css
+++ b/client/src/app.css
@@ -7,3 +7,93 @@ button {
   padding: 5px;
   cursor: pointer;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.table {
+  padding: 50px;
+  box-sizing: border-box;
+  height: 80vh;
+  width: 90vw;
+  background: #ffffff;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+}
+.table h2 {
+  margin-bottom: 10px;
+}
+.table-warpper {
+  width: 100%;
+  height: calc(100% - 32px);
+  overflow-y: auto;
+  border-top-left-radius: 15px;
+
+  border: 1px solid #ddd;
+  border-right: 0;
+  border-top: 0;
+  border-bottom: 0;
+}
+.table-warpper table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.table-warpper::-webkit-scrollbar {
+  width: 6px;
+}
+.table-warpper::-webkit-scrollbar-thumb {
+  background: #d9d9d9;
+  border-radius: 5px;
+}
+.table-warpper thead th {
+  text-align: left;
+  height: 50px;
+  border: 1px solid #ddd;
+  padding: 0 10px;
+  background: #cce5ff;
+}
+.table-warpper thead th:first-child {
+  border-left: 0;
+}
+
+.table-warpper tbody td {
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+.table-warpper tbody tr td:first-child {
+  border-left: 0;
+}
+
+.table-warpper tbody td button {
+  margin: 0 5px;
+}
+.table-warpper tbody td .modify {
+  color: #000;
+  background: #f8f8f8;
+}
+.table-warpper tbody td .save {
+  color: #fff;
+  background: #0073ea;
+}
+.table-warpper tbody td .delete {
+  color: #fff;
+  background: #e44258;
+}
+.table-warpper tbody td input {
+  width: 100%;
+  height: 30px;
+  padding: 0 5px;
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 1px solid #e4e4e9;
+  border-radius: 2px;
+}
